First version with active data fetching

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidPlugin = "7.1.0-beta01"
 kotlin = "1.5.31"
 okhttp = "5.0.0-alpha.2"
 junit = "5.7.1"
-okio = "3.0.0-alpha.10"
-hilt = "2.39.1"
+okio = "3.0.0"
+hilt = "2.40.4"
 compose = "1.1.0-beta01"
 coil = "2.0.0-alpha02"
 
