--- a/settings.gradle
+++ b/settings.gradle
@@ -10,9 +10,9 @@ pluginManagement {
         }
     }
     plugins {
-        id 'com.android.application' version '7.1.0-beta05'
-        id 'com.android.library' version '7.1.0-beta05'
-        id 'com.android.test' version '7.1.0-beta05'
+        id 'com.android.application' version '7.1.0-rc01'
+        id 'com.android.library' version '7.1.0-rc01'
+        id 'com.android.test' version '7.1.0-rc01'
         id 'org.jetbrains.kotlin.android' version '1.6.10'
     }
 }
