--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,99 @@
 [versions]
-androidPlugin = "7.1.0-rc01"
+androidxactivity = "1.5.0-alpha01"
+androidxroom = "2.4.1"
+wearcompose = "1.0.0-alpha15"
+weartiles = "1.0.1"
+androidxwork = "2.7.1"
+googledagger = "2.40.5"
+googlemapsandroid = "2.3.0"
+squareupmoshi = "1.13.0"
+squareupokhttp3 = "5.0.0-alpha.2"
+squareupretrofit2 = "2.9.0"
 kotlin = "1.6.10"
-okhttp = "5.0.0-alpha.2"
-junit = "5.7.1"
-okio = "3.0.0"
-hilt = "2.40.5"
-compose = "1.2.0-alpha01"
-coil = "2.0.0-alpha06"
-coroutines = "1.6.0"
+kotlinx = "1.6.0"
+compose = "1.2.0-alpha02"
 
 [libraries]
-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-kotlin-stdlibJdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
+accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.20.0"
+androidx-activitycompose = { module = "androidx.activity:activity-compose", version.ref = "androidxactivity" }
+androidx-activityktx = { module = "androidx.activity:activity-ktx", version.ref = "androidxactivity" }
+androidx-corektx = "androidx.core:core-ktx:1.7.0"
+androidx-glanceweartiles = "androidx.glance:glance-wear-tiles:1.0.0-alpha02"
+androidx-legacysupportv4 = "androidx.legacy:legacy-support-v4:1.0.0"
+androidx-lifecycleruntimektx = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha01"
+androidx-lifecycleservice = "androidx.lifecycle:lifecycle-service:2.4.0"
+androidx-percentlayout = "androidx.percentlayout:percentlayout:1.0.0"
+androidx-recyclerview = "androidx.recyclerview:recyclerview:1.2.1"
+androidx-securitycryptoktx = "androidx.security:security-crypto-ktx:1.1.0-alpha03"
+androidx-wear = "androidx.wear:wear:1.2.0"
+assertj-core = "org.assertj:assertj-core:3.22.0"
+coil-compose = "io.coil-kt:coil-compose:2.0.0-alpha06"
+android-volley = "com.android.volley:volley:1.2.1"
+compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha01"
+compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.0-alpha02"
+compose-ui = "androidx.compose.ui:ui:1.2.0-alpha02"
+compose-uitooling = "androidx.compose.ui:ui-tooling:1.2.0-alpha01"
+dagger-hiltandroid = { module = "com.google.dagger:hilt-android", version.ref = "googledagger" }
+dagger-hiltandroidcompiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "googledagger" }
+dagger-hiltandroidgradleplugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "googledagger" }
+dagger-hiltandroidtesting = { module = "com.google.dagger:hilt-android-testing", version.ref = "googledagger" }
+dagger-hiltcompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "googledagger" }
+gms-playservicesmaps = "com.google.android.gms:play-services-maps:18.0.2"
+gms-playserviceswearable = "com.google.android.gms:play-services-wearable:17.1.0"
+google-maps = "com.google.android.libraries.maps:maps:3.1.0-beta"
+hilt-compiler = "androidx.hilt:hilt-compiler:1.0.0"
+hilt-lifecycleviewmodel = "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+hilt-navigationcompose = "androidx.hilt:hilt-navigation-compose:1.0.0"
+hilt-work = "androidx.hilt:hilt-work:1.0.0"
+jacoco-ant = "org.jacoco:org.jacoco.ant:0.8.3"
+junit = "junit:junit:4.13.2"
+kotlin-annotationprocessinggradle = { module = "org.jetbrains.kotlin:kotlin-annotation-processing-gradle", version.ref = "kotlin" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+kotlin-stdlibjdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlinx-coroutinescore = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx" }
+kotlinx-coroutinesguava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "kotlinx" }
+kotlinx-coroutinesplayservices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinx" }
+kotlinx-coroutinestest = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx" }
+maps-androidmapsutilsv3 = { module = "com.google.maps.android:android-maps-utils-v3", version.ref = "googlemapsandroid" }
+maps-mapsv3ktx = { module = "com.google.maps.android:maps-v3-ktx", version.ref = "googlemapsandroid" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidxroom" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidxroom" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "androidxroom" }
+squareup-logcat = "com.squareup.logcat:logcat:0.1"
+squareup-moshiadapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "squareupmoshi" }
+squareup-moshikotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "squareupmoshi" }
+squareup-moshikotlincodegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "squareupmoshi" }
+squareup-okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "squareupokhttp3" }
+squareup-okhttp3bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "squareupokhttp3" }
+squareup-okhttp3brotli = { module = "com.squareup.okhttp3:okhttp-brotli", version.ref = "squareupokhttp3" }
+squareup-okhttp3logginginterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "squareupokhttp3" }
+squareup-retrofit2convertermoshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "squareupretrofit2" }
+squareup-retrofit2retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupretrofit2" }
+test-espressocore = "androidx.test.espresso:espresso-core:3.4.0"
+test-extjunit = "androidx.test.ext:junit:1.1.3"
+tikxml-annotation = "com.tickaroo.tikxml:annotation:0.9.3-SNAPSHOT"
+tikxml-core = "com.tickaroo.tikxml:core:0.9.3-SNAPSHOT"
+tikxml-processor = "com.tickaroo.tikxml:processor:0.9.3-SNAPSHOT"
+tikxml-retrofitconverter = "com.tickaroo.tikxml:retrofit-converter:0.8.15"
+wear-complicationsdata = "androidx.wear:wear-complications-data:1.0.0-alpha22"
+wear-complicationsdatasource = "androidx.wear:wear-complications-data-source:1.0.0-alpha22"
+wear-composefoundation = { module = "androidx.wear.compose:compose-foundation", version.ref = "wearcompose" }
+wear-composematerial = { module = "androidx.wear.compose:compose-material", version.ref = "wearcompose" }
+wear-composenavigation = { module = "androidx.wear.compose:compose-navigation", version.ref = "wearcompose" }
+wear-input = "androidx.wear:wear-input:1.2.0-alpha02"
+wear-phoneinteractions = "androidx.wear:wear-phone-interactions:1.0.1"
+wear-remoteinteractions = "androidx.wear:wear-remote-interactions:1.0.0"
+wear-tiles = { module = "androidx.wear.tiles:tiles", version.ref = "weartiles" }
+wear-tilesproto = { module = "androidx.wear.tiles:tiles-proto", version.ref = "weartiles" }
+wear-tilesrenderer = { module = "androidx.wear.tiles:tiles-renderer", version.ref = "weartiles" }
+work-multiprocess = { module = "androidx.work:work-multiprocess", version.ref = "androidxwork" }
+work-runtimektx = { module = "androidx.work:work-runtime-ktx", version.ref = "androidxwork" }
 
-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "coroutines" }
-coroutines-play = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "coroutines" }
-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
-
-okhttp-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
-okhttp-mockWebServer = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
-
-okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
-
-activation = "javax.activation:activation:1.1.1"
-byteunits = "com.jakewharton.byteunits:byteunits:0.9.1"
-junitJupiterApi = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
-junitJupiterEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
-kotlinTest = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-process = "com.github.pgreze:kotlin-process:1.3.1"
-
-[bundles]
+[plugins]
+androidapplication = "com.android.application:7.1.0-rc01"
+benmanesversions = "com.github.ben-manes.versions:0.41.0"
+hiltandroidplugin = "dagger.hilt.android.plugin:2.40.5"
+versioncatalogupdate = "nl.littlerobots.version-catalog-update:0.3.0"
+kotlinandroid = "org.jetbrains.kotlin.android:1.6.10"
+kotlinkapt = "org.jetbrains.kotlin.kapt:1.6.10"
