--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -57,8 +57,7 @@
             android:exported="true"
             android:icon="@drawable/ic_milk"
             android:label="@string/title_remember_wear"
-            android:permission="com.google.android.wearable.permission.BIND_TILE_PROVIDER"
-            android:process=":data">
+            android:permission="com.google.android.wearable.permission.BIND_TILE_PROVIDER">
             <intent-filter>
                 <action android:name="androidx.wear.tiles.action.BIND_TILE_PROVIDER" />
             </intent-filter>
@@ -73,8 +72,7 @@
             android:exported="true"
             android:icon="@drawable/ic_milk"
             android:label="@string/app_name"
-            android:permission="com.google.android.wearable.permission.BIND_COMPLICATION_PROVIDER"
-            android:process=":data">
+            android:permission="com.google.android.wearable.permission.BIND_COMPLICATION_PROVIDER">
             <intent-filter>
                 <action android:name="android.support.wearable.complications.ACTION_COMPLICATION_UPDATE_REQUEST" />
             </intent-filter>
@@ -86,16 +84,6 @@
                 android:name="android.support.wearable.complications.UPDATE_PERIOD_SECONDS"
                 android:value="3600" />
         </service>
-
-        <service
-            android:name="androidx.work.multiprocess.RemoteWorkerService"
-            android:exported="false"
-            android:process=":data" />
-
-        <provider
-            android:name="androidx.startup.InitializationProvider"
-            android:authorities="${applicationId}.androidx-startup"
-            tools:node="remove"></provider>
 
     </application>
 
