--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -83,6 +83,8 @@ wear-tiles = { module = "androidx.wear.tiles:tiles", version.ref = "weartiles" }
 wear-tilesproto = { module = "androidx.wear.tiles:tiles-proto", version.ref = "weartiles" }
 wear-tilesrenderer = { module = "androidx.wear.tiles:tiles-renderer", version.ref = "weartiles" }
 work-runtimektx = { module = "androidx.work:work-runtime-ktx", version.ref = "androidxwork" }
+test-uiautomator = "androidx.test.uiautomator:uiautomator:2.2.0"
+androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.0-alpha12"
 
 [plugins]
 androidapplication = "com.android.application:7.1.2"
