--- a/settings.gradle
+++ b/settings.gradle
@@ -31,4 +31,4 @@ dependencyResolutionManagement {
 
 rootProject.name = "RememberWear"
 include ':wear'
-//include ':benchmark'
+include ':benchmark'
