--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-androidx-compose-ui = "1.2.0-alpha04"
+androidx-compose-ui = "1.2.0-alpha05"
+androidx-hilt = "1.0.0"
 androidxactivity = "1.5.0-alpha03"
 androidxroom = "2.4.2"
 androidxwork = "2.8.0-alpha01"
@@ -11,24 +12,24 @@ kotlinx = "1.6.0"
 squareupmoshi = "1.13.0"
 squareupokhttp3 = "5.0.0-alpha.5"
 squareupretrofit2 = "2.9.0"
-wearcompose = "1.0.0-alpha17"
+wearcompose = "1.0.0-alpha18"
 weartiles = "1.0.1"
 
 [libraries]
 accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.23.1"
-android-volley = "com.android.volley:volley:1.2.1"
 androidx-activityktx = { module = "androidx.activity:activity-ktx", version.ref = "androidxactivity" }
+androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.0-beta04"
 androidx-corektx = "androidx.core:core-ktx:1.7.0"
 androidx-glanceweartiles = "androidx.glance:glance-wear-tiles:1.0.0-alpha03"
 androidx-legacysupportv4 = "androidx.legacy:legacy-support-v4:1.0.0"
-androidx-lifecycleruntimektx = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha03"
+androidx-lifecycleruntimektx = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha04"
 androidx-lifecycleservice = "androidx.lifecycle:lifecycle-service:2.4.1"
 androidx-securitycryptoktx = "androidx.security:security-crypto-ktx:1.1.0-alpha03"
 androidx-wear = "androidx.wear:wear:1.2.0"
 assertj-core = "org.assertj:assertj-core:3.22.0"
-coil-compose = "io.coil-kt:coil-compose:2.0.0-alpha09"
-compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha04"
-compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.0-alpha04"
+coil-compose = "io.coil-kt:coil-compose:2.0.0-rc01"
+compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha05"
+compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.0-alpha05"
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose-ui" }
 compose-uitooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose-ui" }
 dagger-hiltandroid = { module = "com.google.dagger:hilt-android", version.ref = "googledagger" }
@@ -36,11 +37,10 @@ dagger-hiltandroidcompiler = { module = "com.google.dagger:hilt-android-compiler
 dagger-hiltandroidgradleplugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "googledagger" }
 dagger-hiltandroidtesting = { module = "com.google.dagger:hilt-android-testing", version.ref = "googledagger" }
 dagger-hiltcompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "googledagger" }
-gms-playservicesmaps = "com.google.android.gms:play-services-maps:18.0.2"
 gms-playserviceswearable = "com.google.android.gms:play-services-wearable:17.1.0"
-hilt-compiler = "androidx.hilt:hilt-compiler:1.0.0"
-hilt-navigationcompose = "androidx.hilt:hilt-navigation-compose:1.0.0"
-hilt-work = "androidx.hilt:hilt-work:1.0.0"
+hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidx-hilt" }
+hilt-navigationcompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt" }
+hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "androidx-hilt" }
 jacoco-ant = "org.jacoco:org.jacoco.ant:0.8.7"
 junit = "junit:junit:4.13.2"
 kotlin-annotationprocessinggradle = { module = "org.jetbrains.kotlin:kotlin-annotation-processing-gradle", version.ref = "kotlin" }
@@ -66,13 +66,14 @@ squareup-retrofit2convertermoshi = { module = "com.squareup.retrofit2:converter-
 squareup-retrofit2retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupretrofit2" }
 test-espressocore = "androidx.test.espresso:espresso-core:3.4.0"
 test-extjunit = "androidx.test.ext:junit:1.1.3"
+test-uiautomator = "androidx.test.uiautomator:uiautomator:2.2.0"
 tikxml-annotation = "com.tickaroo.tikxml:annotation:0.9.3-SNAPSHOT"
 tikxml-core = "com.tickaroo.tikxml:core:0.9.3-SNAPSHOT"
 tikxml-processor = "com.tickaroo.tikxml:processor:0.9.3-SNAPSHOT"
 tikxml-retrofitconverter = "com.tickaroo.tikxml:retrofit-converter:0.8.15"
-wear-complicationsdata = "androidx.wear:wear-complications-data:1.0.0-alpha22"
-wear-complicationsdatasource = "androidx.wear:wear-complications-data-source:1.0.0-alpha22"
-wear-complicationsdatasourcektx = "androidx.wear:wear-complications-data-source-ktx:1.0.0-alpha22"
+wear-complicationsdata = "androidx.wear.watchface:watchface-complications-data:1.1.0-alpha03"
+wear-complicationsdatasource = "androidx.wear.watchface:watchface-complications-data-source:1.1.0-alpha03"
+wear-complicationsdatasourcektx = "androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.0-alpha03"
 wear-composefoundation = { module = "androidx.wear.compose:compose-foundation", version.ref = "wearcompose" }
 wear-composematerial = { module = "androidx.wear.compose:compose-material", version.ref = "wearcompose" }
 wear-composenavigation = { module = "androidx.wear.compose:compose-navigation", version.ref = "wearcompose" }
@@ -81,10 +82,7 @@ wear-phoneinteractions = "androidx.wear:wear-phone-interactions:1.0.1"
 wear-remoteinteractions = "androidx.wear:wear-remote-interactions:1.0.0"
 wear-tiles = { module = "androidx.wear.tiles:tiles", version.ref = "weartiles" }
 wear-tilesproto = { module = "androidx.wear.tiles:tiles-proto", version.ref = "weartiles" }
-wear-tilesrenderer = { module = "androidx.wear.tiles:tiles-renderer", version.ref = "weartiles" }
 work-runtimektx = { module = "androidx.work:work-runtime-ktx", version.ref = "androidxwork" }
-test-uiautomator = "androidx.test.uiautomator:uiautomator:2.2.0"
-androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.0-beta04"
 
 [plugins]
 androidapplication = "com.android.application:7.1.2"
