--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,6 +11,7 @@ jobs:
       - name: set up JDK 11
         uses: actions/setup-java@v1
         with:
+          distribution: 'zulu'
           java-version: 11
       - name: Build android app
         run: ./gradlew assembleDebug
@@ -27,6 +28,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
+          distribution: 'zulu'
           java-version: 11
 
       - name: Wear Instrumentation Tests
