--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name="firebase_performance_logcat_enabled"
             android:value="true" />
 
+        <meta-data
+            android:name="google_analytics_adid_collection_enabled"
+            android:value="false" />
+
         <uses-library
             android:name="com.google.android.wearable"
             android:required="false" />
