--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -91,6 +91,7 @@ wear-tiles = { module = "androidx.wear.tiles:tiles", version.ref = "weartiles" }
 wear-tilesproto = { module = "androidx.wear.tiles:tiles-proto", version.ref = "weartiles" }
 work-runtimektx = { module = "androidx.work:work-runtime-ktx", version.ref = "androidxwork" }
 fastlane-screengrab = "tools.fastlane:screengrab:2.1.1"
+profileinstaller = "androidx.profileinstaller:profileinstaller:1.2.0-alpha02"
 
 [plugins]
 androidapplication = "com.android.application:7.1.2"
