--- a/wear/src/debug/AndroidManifest.xml
+++ b/wear/src/debug/AndroidManifest.xml
@@ -20,4 +20,28 @@
     <uses-permission
         android:name="android.permission.DUMP"
         tools:ignore="ProtectedPermissions" />
+
+    <application>
+        <activity
+            android:name=".TilesPreviewActivity"
+            android:exported="true"
+            android:label= "@string/app_name">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".TilesTestActivity"
+            android:exported="true"
+            android:label= "@string/app_name">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
