--- a/settings.gradle
+++ b/settings.gradle
@@ -4,11 +4,6 @@ pluginManagement {
         google()
         mavenCentral()
     }
-    resolutionStrategy.eachPlugin {
-        if (it.requested.id.id == "com.google.dagger.hilt.android") {
-            useModule("com.google.dagger:hilt-android-gradle-plugin:2.41")
-        }
-    }
     plugins {
         id 'com.android.application' version '7.1.2'
         id 'com.android.library' version '7.1.2'
@@ -16,7 +11,6 @@ pluginManagement {
         id 'org.jetbrains.kotlin.android' version '1.6.10'
     }
 }
-enableFeaturePreview("VERSION_CATALOGS")
 
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
@@ -25,6 +19,9 @@ dependencyResolutionManagement {
         mavenCentral()
         maven {
             url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
+        maven {
+            url 'https://androidx.dev/snapshots/builds/8325633/artifacts/repository'
         }
     }
 }
