--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,54 +1,54 @@
 [versions]
-androidx-compose-ui = "1.2.0-alpha05"
+androidx-compose-ui = "1.2.0-alpha06"
 androidx-hilt = "1.0.0"
-androidxactivity = "1.5.0-alpha03"
-androidxroom = "2.4.2"
+androidx-lifecycle = "2.5.0-alpha05"
+androidx-wear-watchface = "1.1.0-alpha04"
+androidxactivity = "1.5.0-alpha04"
+androidxroom = "2.5.0-alpha01"
 androidxwork = "2.8.0-alpha01"
-compose = "1.2.0-alpha02"
+com-google-android-horologist = "0.0.10"
 googledagger = "2.41"
-googlemapsandroid = "2.3.0"
-kotlin = "1.6.20"
+kotlin = "1.6.10"
 kotlinx = "1.6.0"
 squareupmoshi = "1.13.0"
-squareupokhttp3 = "5.0.0-alpha.5"
+squareupokhttp3 = "5.0.0-alpha.6"
 squareupretrofit2 = "2.9.0"
 wearcompose = "1.0.0-alpha19"
-weartiles = "1.1.0-SNAPSHOT"
+weartiles = "1.1.0-alpha04"
 
 [libraries]
-horologist-tiles = "com.google.android.horologist:horologist-tiles:0.0.10"
-horologist-compose-layout = "com.google.android.horologist:horologist-compose-layout:0.0.10"
-accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.23.1"
+accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.24.5-alpha"
 androidx-activityktx = { module = "androidx.activity:activity-ktx", version.ref = "androidxactivity" }
 androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.0-beta05"
-androidx-corektx = "androidx.core:core-ktx:1.7.0"
+androidx-corektx = "androidx.core:core-ktx:1.8.0-alpha06"
 androidx-glanceweartiles = "androidx.glance:glance-wear-tiles:1.0.0-alpha03"
 androidx-legacysupportv4 = "androidx.legacy:legacy-support-v4:1.0.0"
-androidx-lifecycleruntimektx = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha04"
-androidx-lifecycleservice = "androidx.lifecycle:lifecycle-service:2.4.1"
-androidx-securitycryptoktx = "androidx.security:security-crypto-ktx:1.1.0-alpha03"
+androidx-lifecycleruntimektx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
+androidx-lifecycleservice = { module = "androidx.lifecycle:lifecycle-service", version.ref = "androidx-lifecycle" }
 androidx-metrics-performance = "androidx.metrics:metrics-performance:1.0.0-alpha01"
-androidx-wear = "androidx.wear:wear:1.2.0"
+androidx-securitycryptoktx = "androidx.security:security-crypto-ktx:1.1.0-alpha03"
+androidx-wear = "androidx.wear:wear:1.3.0-alpha02"
 assertj-core = "org.assertj:assertj-core:3.22.0"
-coil-compose = "io.coil-kt:coil-compose:2.0.0-rc01"
-compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha05"
-compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.0-alpha05"
+coil-compose = "io.coil-kt:coil-compose:2.0.0-rc02"
+compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha06"
+compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.0-alpha06"
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose-ui" }
 compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-compose-ui" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-compose-ui" }
 compose-uitooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose-ui" }
 dagger-hiltandroid = { module = "com.google.dagger:hilt-android", version.ref = "googledagger" }
 dagger-hiltandroidcompiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "googledagger" }
-dagger-hiltandroidgradleplugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "googledagger" }
 dagger-hiltandroidtesting = { module = "com.google.dagger:hilt-android-testing", version.ref = "googledagger" }
 dagger-hiltcompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "googledagger" }
+fastlane-screengrab = "tools.fastlane:screengrab:2.1.1"
+firebase-analytics = "com.google.firebase:firebase-analytics-ktx:20.1.2"
+firebase-crashlytics = "com.google.firebase:firebase-crashlytics-ktx:18.2.9"
 gms-playserviceswearable = "com.google.android.gms:play-services-wearable:17.1.0"
 hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidx-hilt" }
 hilt-navigationcompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt" }
 hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "androidx-hilt" }
-firebase-analytics = "com.google.firebase:firebase-analytics-ktx:20.1.2"
-firebase-crashlytics = "com.google.firebase:firebase-crashlytics-ktx:18.2.9"
-firebase-performance = "com.google.firebase:firebase-perf-ktx:20.0.6"
+horologist-compose-layout = { module = "com.google.android.horologist:horologist-compose-layout", version.ref = "com-google-android-horologist" }
+horologist-tiles = { module = "com.google.android.horologist:horologist-tiles", version.ref = "com-google-android-horologist" }
 jacoco-ant = "org.jacoco:org.jacoco.ant:0.8.7"
 junit = "junit:junit:4.13.2"
 kotlin-annotationprocessinggradle = { module = "org.jetbrains.kotlin:kotlin-annotation-processing-gradle", version.ref = "kotlin" }
@@ -59,6 +59,7 @@ kotlinx-coroutinescore = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-co
 kotlinx-coroutinesguava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "kotlinx" }
 kotlinx-coroutinesplayservices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinx" }
 kotlinx-coroutinestest = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx" }
+profileinstaller = "androidx.profileinstaller:profileinstaller:1.2.0-alpha02"
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidxroom" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidxroom" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "androidxroom" }
@@ -72,21 +73,21 @@ squareup-okhttp3brotli = { module = "com.squareup.okhttp3:okhttp-brotli", versio
 squareup-okhttp3logginginterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "squareupokhttp3" }
 squareup-retrofit2convertermoshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "squareupretrofit2" }
 squareup-retrofit2retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupretrofit2" }
-test-espressocore = "androidx.test.espresso:espresso-core:3.4.0"
-test-extjunit = "androidx.test.ext:junit:1.1.3"
+test-espressocore = "androidx.test.espresso:espresso-core:3.5.0-alpha05"
+test-extjunit = "androidx.test.ext:junit:1.1.4-alpha05"
 test-uiautomator = "androidx.test.uiautomator:uiautomator:2.2.0"
 tikxml-annotation = "com.tickaroo.tikxml:annotation:0.9.3-SNAPSHOT"
 tikxml-core = "com.tickaroo.tikxml:core:0.9.3-SNAPSHOT"
 tikxml-processor = "com.tickaroo.tikxml:processor:0.9.3-SNAPSHOT"
 tikxml-retrofitconverter = "com.tickaroo.tikxml:retrofit-converter:0.8.15"
-wear-complicationsdata = "androidx.wear.watchface:watchface-complications-data:1.1.0-alpha04"
-wear-complicationsdatasource = "androidx.wear.watchface:watchface-complications-data-source:1.1.0-alpha04"
-wear-complicationsdatasourcektx = "androidx.wear.watchface:watchface-complications-data-source-ktx:1.1.0-alpha04"
+wear-complicationsdata = { module = "androidx.wear.watchface:watchface-complications-data", version.ref = "androidx-wear-watchface" }
+wear-complicationsdatasource = { module = "androidx.wear.watchface:watchface-complications-data-source", version.ref = "androidx-wear-watchface" }
+wear-complicationsdatasourcektx = { module = "androidx.wear.watchface:watchface-complications-data-source-ktx", version.ref = "androidx-wear-watchface" }
 wear-composefoundation = { module = "androidx.wear.compose:compose-foundation", version.ref = "wearcompose" }
 wear-composematerial = { module = "androidx.wear.compose:compose-material", version.ref = "wearcompose" }
 wear-composenavigation = { module = "androidx.wear.compose:compose-navigation", version.ref = "wearcompose" }
 wear-input = "androidx.wear:wear-input:1.2.0-alpha02"
-wear-phoneinteractions = "androidx.wear:wear-phone-interactions:1.0.1"
+wear-phoneinteractions = "androidx.wear:wear-phone-interactions:1.1.0-alpha03"
 wear-remoteinteractions = "androidx.wear:wear-remote-interactions:1.0.0"
 wear-tiles = { module = "androidx.wear.tiles:tiles", version.ref = "weartiles" }
 wear-tiles-material = { module = "androidx.wear.tiles:tiles-material", version.ref = "weartiles" }
@@ -94,14 +95,12 @@ wear-tiles-renderer = { module = "androidx.wear.tiles:tiles-renderer", version.r
 wear-tilesproto = { module = "androidx.wear.tiles:tiles-proto", version.ref = "weartiles" }
 work-runtimektx = { module = "androidx.work:work-runtime-ktx", version.ref = "androidxwork" }
 work-testing = { module = "androidx.work:work-testing", version.ref = "androidxwork" }
-fastlane-screengrab = "tools.fastlane:screengrab:2.1.1"
-profileinstaller = "androidx.profileinstaller:profileinstaller:1.2.0-alpha02"
 
 [plugins]
-androidapplication = "com.android.application:7.1.2"
-hilt = "com.google.dagger.hilt.android:2.41"
-kotlinandroid = "org.jetbrains.kotlin.android:1.6.20"
-kotlinkapt = "org.jetbrains.kotlin.kapt:1.6.20"
+androidapplication = "com.android.application:7.3.0-alpha07"
 firebase = "com.google.gms.google-services:4.3.10"
 firebasecrashlytics = "com.google.firebase.crashlytics:2.8.1"
 firebaseperformance = "com.google.firebase.firebase-perf:1.4.1"
+hilt = "com.google.dagger.hilt.android:2.41"
+kotlinandroid = "org.jetbrains.kotlin.android:1.6.10"
+kotlinkapt = "org.jetbrains.kotlin.kapt:1.6.10"
