--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,26 @@
 [versions]
-androidx-compose-ui = "1.2.0-alpha06"
+androidx-compose-ui = "1.2.0-alpha07"
 androidx-hilt = "1.0.0"
-androidx-lifecycle = "2.5.0-alpha05"
-androidx-wear-watchface = "1.1.0-alpha04"
+androidx-lifecycle = "2.5.0-alpha06"
+androidx-test-ext = "1.1.4-alpha05"
+androidx-wear-watchface = "1.1.0-alpha05"
 androidxactivity = "1.5.0-alpha04"
 androidxroom = "2.5.0-alpha01"
-androidxwork = "2.8.0-alpha01"
-com-google-android-horologist = "0.0.10"
+androidxwork = "2.8.0-alpha02"
+com-google-android-horologist = "0.0.12"
 googledagger = "2.41"
 kotlin = "1.6.10"
 kotlinx = "1.6.1"
 squareupmoshi = "1.13.0"
 squareupokhttp3 = "5.0.0-alpha.6"
 squareupretrofit2 = "2.9.0"
-wearcompose = "1.0.0-alpha19"
-weartiles = "1.1.0-alpha04"
+wearcompose = "1.0.0-alpha20"
+weartiles = "1.1.0-alpha05"
 
 [libraries]
-accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.24.5-alpha"
+accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.24.6-alpha"
 androidx-activityktx = { module = "androidx.activity:activity-ktx", version.ref = "androidxactivity" }
-androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.0-beta05"
+androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.0-beta06"
 androidx-corektx = "androidx.core:core-ktx:1.8.0-alpha06"
 androidx-glanceweartiles = "androidx.glance:glance-wear-tiles:1.0.0-alpha03"
 androidx-legacysupportv4 = "androidx.legacy:legacy-support-v4:1.0.0"
@@ -31,8 +32,8 @@ androidx-tracing-ktx = "androidx.tracing:tracing-ktx:1.1.0-beta01"
 androidx-wear = "androidx.wear:wear:1.3.0-alpha02"
 assertj-core = "org.assertj:assertj-core:3.22.0"
 coil-compose = "io.coil-kt:coil-compose:2.0.0-rc02"
-compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha06"
-compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.0-alpha06"
+compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha07"
+compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.0-alpha07"
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose-ui" }
 compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-compose-ui" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-compose-ui" }
@@ -75,7 +76,8 @@ squareup-okhttp3logginginterceptor = { module = "com.squareup.okhttp3:logging-in
 squareup-retrofit2convertermoshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "squareupretrofit2" }
 squareup-retrofit2retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupretrofit2" }
 test-espressocore = "androidx.test.espresso:espresso-core:3.5.0-alpha05"
-test-extjunit = "androidx.test.ext:junit:1.1.4-alpha05"
+test-extjunit = { module = "androidx.test.ext:junit", version.ref = "androidx-test-ext" }
+test-extjunitktx = { module = "androidx.test.ext:junit-ktx", version.ref = "androidx-test-ext" }
 test-uiautomator = "androidx.test.uiautomator:uiautomator:2.2.0"
 tikxml-annotation = "com.tickaroo.tikxml:annotation:0.9.3-SNAPSHOT"
 tikxml-core = "com.tickaroo.tikxml:core:0.9.3-SNAPSHOT"
