--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -34,8 +35,7 @@
 
         <activity
             android:name=".RememberWearActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -106,7 +106,10 @@
 <!--                android:value="androidx.startup" />-->
         </provider>
 
-        <receiver android:name=".app.WorkaroundBroadcastReceiver">
+        <receiver
+            android:name=".app.WorkaroundBroadcastReceiver"
+            android:exported="false"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.SCREEN_OFF" />
                 <action android:name="android.intent.action.SCREEN_ON" />
